# Capstone-yoGERT

./: .gitignore  CONTRIBUTING.md  CodeOfConduct.md  ExceptionsGranted.md  INSTALL.md  LICENSE  README.md  data1.xlsx  setup.cfg  setup.py
SHPfiles/: travelepisodew.dbf  travelepisodew.shp  travelepisodew.shx
demo/: demo.ipynb  presentationDemo.ipynb
docs/: .gitignore  Comments.tex  Common.tex  Makefile  README.md
refs/: README.md  References.bib
samples/: OSMsample.py  fetchALUfromOpenStreetsApi.py  fetchALUfromOverpass.py
setup/: setup.sh
src/: ActivityLocation.py  AlternativeRoute.py  CustomExceptions.py  EpisodeGeneration.py  FetchActivityLocations.py  GenerateRoute.py  Mapping.py  NetworkGraph.py  Point.py  PreProcessing.py  SSR_performance.py  ShortestRoute.py  ShortestRouteEpisode.py  ShortestRouteStop.py  ShortestRouteTrace.py  StopPoint.py  Transformation.py  convertCSVtoSHP.py  createEpisode.ipynb  episodeGeneration.py  exampleDataset.csv  fetchActivityLocations.py  fetchActivityLocations2.py  main.py  stats.py  stops.txt  test.py  testFetch.csv  test_EpisodeGeneration.py  test_PreProcessing.py  test_TraceRouteMap.html  test_Transformation.py  test_convertCSVtoSHP.py  test_fetchActivityLocations.py  trace-activityLocation.csv
test/: .coverage  README.md  testFetch.csv  testShortest.csv  test_EpisodeGeneration.py  test_PreProcessing.py  test_Transformation.py
yoGERT/: AlternativeRoute.py  EpisodeGeneration.py  FetchActivityLocations.py  Mapping.py  ShortestRouteEpisode.py  (+2 more)
yoGERT.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+168 files in other folders)
