[metadata]
name = yoGERT
version = 0.0.2
author = Abeer Al-Yasiri, Longwei Ye, Nicholas Lobo, Niyatha Rangarajan, Smita Singh, Moksha Srinivasan
author_email = author@example.com, tommyylw0107@outlook.com, lobon3@mcmaster.ca, rangaran@mcmaster.ca, smitadsingh4u@gmail.com, moksha.srinivas@gmail.com
url = https://github.com/NicLobo/Capstone-yoGERT
description = An open source version of the GERT library. Used for analysis of GPS datasets.

[options] 
python_requires = >=3.7
install_requires =
    pandas
    numpy
    scipy
    geopandas
    h3
    osmnx
    networkx
    scikit-learn
    overpy
    geopy
    requests
    python-dateutil
